tests/fixtures/invalid/list_sub_bool.py
# Cannot subtract List[int] and Bool
x: list[int] = [1, 2, 3] - True
